# inexor-rgf-flow-editor

./: .gitignore  README.md  build.js  dev.js  graphql.config.yml  package.json  product.json
.run/: Run.run.xml  Tauri Build.run.xml  Tauri Dev.run.xml  samplecmd install.run.xml  samplecmd package.run.xml
dynamic_graph/: schema.graphql
extensions/sample/: package.json
extensions/samplecmd/: package.json  webpack.config.js
extensions/samplecmd/src/: extension.ts
graphql/: schema.graphql
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: exit.rs  mod.rs
