[package]
name = "inexor-rgf-flow-editor"
version = "0.9.1"
description = "IDE for editing flows"
authors = ["Andreas Schaeffer <hanack@nooblounge.net>"]
license = "MIT"
repository = ""
#default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }
build-data = "0.1"

[dependencies]
actix-web = { version = "4.0", default-features = false, features = ["macros"] }
async-graphql = { version = "5.0", features = ["uuid"] }
async-graphql-actix-web = "5.0"
dashmap = "5.4"
log = { version = "0.4", features = ["std", "serde"] }
log4rs = { version = "1.2", features = ["console_appender", "file_appender", "toml_format", "ansi_writer"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["notification-all", "process-exit", "process-relaunch", "shell-open"] }
tokio = { version = "1", features =  ["macros", "time", "rt", "rt-multi-thread"] }

### Prefer git over crates.io for development

inexor-rgf-rt = { version = "0.9.1", git = "https://github.com/inexorgame/inexor-rgf-application.git" }
inexor-rgf-model-runtime = { version = "0.9.1", git = "https://github.com/inexorgame/inexor-rgf-application.git" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
